[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Kademlia Routing Table implementation"
documentation = "http://maidsafe.net/kademlia_routing_table/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "kademlia_routing_table"
readme = "README.md"
repository = "https://github.com/maidsafe/kademlia_routing_table"
version = "0.5.1"

[dependencies]
clippy = {version = "~0.0.67", optional = true}
itertools = "~0.4.15"
log = "~0.3.6"
maidsafe_utilities = "~0.5.4"
rand = "~0.3.14"
xor_name = "~0.1.0"
